Fixing colour contrast issue

--- a/University/Admin assets/CSS/build-orkney-main.css
+++ b/University/Admin assets/CSS/build-orkney-main.css
@@ -1267,7 +1267,7 @@ section courses coursefinder
 }
 
 .section.courses.coursefinder form input[type="submit"] {
-  color: #ccc;
+  color: #0f0f0f;
 }
 
 /* section ctas */
